Use snuownd as a test comparison

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "snudown"]
 	path = snudown
 	url = https://github.com/reddit/snudown.git
+[submodule "test/snuownd"]
+	path = test/snuownd
+	url = https://github.com/gamefreak/snuownd.git
